feature: 启用stream.woa.com-调整蓝鲸统一登录链接 --story=867385131

--- a/src/frontend/devops-gitci/index.html
+++ b/src/frontend/devops-gitci/index.html
@@ -13,7 +13,7 @@
             var SITE_URL = ''
             var STATIC_URL = '/'
             var REMOTE_STATIC_URL = ''
-            var LOGIN_SERVICE_URL = 'http://login.o.woa.com/'
+            var LOGIN_SERVICE_URL = 'https://passport.woa.com/modules/passport/signin.ashx'
             var PROXY_URL_PREFIX = 'devnet.devops.woa.com'
         </script>
     </body>
