--- a/src/frontend/devops-nav/src/index.html
+++ b/src/frontend/devops-nav/src/index.html
@@ -453,7 +453,7 @@
             init(...response)
         }).catch(function (e) {
             console.log(e)
-            // printError(e.status)
+            printError(e.status)
         })
 
         function printError (status) {
