--- a/src/frontend/devops-nav/src/index.html
+++ b/src/frontend/devops-nav/src/index.html
@@ -264,7 +264,7 @@
 
         function joinUrl (urlArr) {
             const link = urlArr[urlArr.length - 1]
-            if (/http(s)?:\/\//.test(link)) {
+            if (/^(http(s)?:)?\/\//i.test(link)) {
                 return link
             }
             if (Array.isArray(urlArr)) {
