--story=869623627 前端设置cookie现在统一往 *.woa.com、*.oa.com写，会导致X-DEVOPS-PROJECT-ID被污染

--- a/src/frontend/devops-stream/index.html
+++ b/src/frontend/devops-stream/index.html
@@ -14,6 +14,8 @@
             var REMOTE_STATIC_URL = ''
             var LOGIN_SERVICE_URL = 'https://passport.woa.com/modules/passport/signin.ashx'
             var PROXY_URL_PREFIX = 'devnet.devops.woa.com'
+            var X_DEVOPS_PROJECT_ID = 'X-DEVOPS-PROJECT-ID'
+            var ROUTER_TAG = 'ROUTER_TAG'
         </script>
         <script>
             function getLoginUrl (domain = LOGIN_SERVICE_URL) {
