--- a/src/frontend/devops-pipeline/index.html
+++ b/src/frontend/devops-pipeline/index.html
@@ -56,7 +56,7 @@
         var PERM_URL_PREFIX = '__BK_PAAS_PUBLIC_URL__/o/bk_iam_app' // EE PERM URL PREFIX
         var DOCS_URL_PREFIX = '__BK_CI_DOCS_URL__'
         var IWIKI_DOCS_URL = '__IWIKI_DOCS_URL__'
-        var PROXY_URL_PREFIX = '//devnet.devops.oa.com'
+        var PROXY_URL_PREFIX = '//devnet.devops.woa.com'
     </script>
 </body>
 </html>
