--- a/src/frontend/devops-stream/index.html
+++ b/src/frontend/devops-stream/index.html
@@ -57,6 +57,7 @@
             //     })
             // }
         </script>
+        <script src="https://radosgw.open.woa.com/bkicon-default-9/stream-0.0.2/fonts/iconcool.js"></script>
         <script src="/static/lib.bundle.js"></script>
     </body>
 </html>
