--- a/src/frontend/devops-stream/index.html
+++ b/src/frontend/devops-stream/index.html
@@ -59,5 +59,6 @@
         </script>
         <script src="https://radosgw.open.woa.com/bkicon-default-9/stream-0.0.2/fonts/iconcool.js"></script>
         <script src="/static/lib.bundle.js"></script>
+        <link href="https://radosgw.open.woa.com/bkicon-default-9/stream-0.0.2/fonts/style.css" rel="stylesheet">
     </body>
 </html>
