--- a/src/frontend/devops-pipeline/index.html
+++ b/src/frontend/devops-pipeline/index.html
@@ -57,6 +57,10 @@
         var DOCS_URL_PREFIX = '__BK_CI_DOCS_URL__'
         var IWIKI_DOCS_URL = '__IWIKI_DOCS_URL__'
         var PROXY_URL_PREFIX = '//devnet.devops.woa.com'
+        if (location.host.endsWith('.oa.com')) {
+            PROXY_URL_PREFIX = PROXY_URL_PREFIX.replace('.woa.com', '.oa.com').replace('-devnet', '.devnet')
+        }
+        console.log('proxyUrl:', PROXY_URL_PREFIX)
     </script>
 </body>
 </html>
